update css, render views with ejs

--- a/views/set.ejs
+++ b/views/set.ejs
@@ -63,7 +63,7 @@
             const { content, author } = data;
 
             quoteContainer.innerHTML = `
-        <p>"${content}<br>-${author}"</p>
+        <p>"${content}"<br>-${author}</p>
   
     `;
           })
