--- a/views/sets.ejs
+++ b/views/sets.ejs
@@ -21,7 +21,7 @@
         </div>
       </div>
     </div>
-
+<div class="container mx-auto">
     <div class="overflow-x-auto">
       <table class="table table-zebra">
         <tbody>
@@ -50,5 +50,6 @@
         </tbody>
       </table>
     </div>
+</div>
   </body>
 </html>
