--- a/views/sets.ejs
+++ b/views/sets.ejs
@@ -9,6 +9,9 @@
   <body>
     <%- include('partials/navbar', {page: "/lego/sets"}) %>
 
+
+
+<!-- sssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssssss -->
     <div class="container mx-auto">
       <div class="hero bg-base-200 rounded-lg p-6">
         <div class="hero-content text-center">
@@ -35,7 +38,7 @@
                 </div>
               </td>
               <td>
-                <%= set.name %><%= ' | ' %><a class="btn  mt-2 btn-xs" href="/lego/sets?theme=<%= set.theme %>"><%= set.theme %></a>
+                <%= set.name %><%= ' | ' %><a class="btn  mt-2 btn-xs" href="/lego/sets?theme=<%= set.Theme.name %>"><%= set.Theme.name %></a>
               </td>
               <td>
                 <strong><%= 'Year: ' %></strong><%= set.year %><strong><%= ' - Parts: '%></strong><%= set.num_parts %>
