--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,3 +1,5 @@
+<navbar>
+
 <div class="navbar bg-base-100">
   <div class="flex-1">
     <a class="btn btn-ghost normal-case text-xl" href="/">Lego Collection</a>
@@ -17,4 +19,4 @@
     </ul>
   </div>
 </div>
-
+</navbar>
