--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,3 @@
-<navbar>
-
 <div class="navbar bg-base-100">
   <div class="flex-1">
     <a class="btn btn-ghost normal-case text-xl" href="/">Lego Collection</a>
@@ -10,13 +8,37 @@
       <li>
         <a class="<%= (page == '/lego/sets') ? 'active' : '' %>" href="/lego/sets">View Collection</a>
       </li>
-      <li>
+      <!-- <li>
         <a class="<%= (page == '/lego/addSet') ? 'active' : '' %>" href="/lego/addSet">Add to Collection</a>
-      </li>
+      </li> -->
       <li>
         <a class="<%= (page == '/about') ? 'active' : '' %>" href="/about">About</a>
       </li>
+
+      <% if(session.user){ %>
+        <li>
+          <details>
+            <summary>Account: <%= session.user.userName %></summary>
+            <ul class="p-2 right-0">
+              <li><a class="<%= (page == '/lego/addSet') ? 'active' : '' %>" href="/lego/addSet">Add to Collection</a></li>
+              <li><a class="<%= (page == '/userHistory') ? 'active' : '' %>" href="/userHistory">User History</a></li>
+              <li><a href="/logout">Log Out</a></li>
+            </ul>
+          </details>
+        </li>
+      <% } %>
+
+      <% if(!session.user){ %>
+        <li>
+          <details>
+            <summary>Account</summary>
+            <ul class="p-2 right-0">
+              <li><a class="<%= (page == '/login') ? 'active' : '' %>" href="/login">Login</a></li>
+              <li><a class="<%= (page == '/register') ? 'active' : '' %>" href="/register">Register</a></li>
+            </ul>
+          </details>
+        </li>
+      <% } %>
     </ul>
   </div>
 </div>
-</navbar>
